--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
       document.getElementById("language").append(liff.getLanguage())
       document.getElementById("version").append(liff.getVersion())
       document.getElementById("accessToken").append(liff.getAccessToken())
-      document.getElementById("isInClient").append(liff.IsInClient())
+      document.getElementById("isInClient").append(liff.isInClient())
       if (liff.IsInClient()){
         document.getElementById("btnLogOut").style.display = "none"
       }
