--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
       document.getElementById("version").append(liff.getVersion())
       document.getElementById("accessToken").append(liff.getAccessToken())
       document.getElementById("isInClient").append(liff.isInClient())
-      if (liff.IsInClient()){
+      if (liff.isInClient()){
         document.getElementById("btnLogOut").style.display = "none"
       }
       else{
