--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
     }
 
     async function main() {
-      await liff.init({ liffId: "1654051289-ndqQgPOY" })
+      await liff.init({ liffId: "YOR-LIFF-ID" })
       document.getElementById("isLoggedIn").append(liff.isLoggedIn())
       if (liff.isLoggedIn()) {
         getEnvironment()
