--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
   <script src="js/vconsole.min.js"></script>
   <script>
     var vConsole = new VConsole()
-    console.log("Hello World!")
+    //console.log("Hello World!")
   </script>
 
   <script src="https://static.line-scdn.net/liff/edge/2.1/sdk.js"></script>
