--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
       await liff.shareTargetPicker([
         {
           "type": "text",
-          "text": "This message was send by shareTargetPicker"
+          "text": "This message was send by shareTargetPicker."
         }
       ])
     }
